chore: correct rclone service and setup rclone timer to auto trigger rclone service

--- a/ansible/roles/rclone/handlers/main.yml
+++ b/ansible/roles/rclone/handlers/main.yml
@@ -4,6 +4,9 @@
 
 - name: restart rclone
   service:
-    name: rclone
+    name: "{{ item }}"
     state: restarted
     enabled: true
+  with_items:
+    - "rclone.service"
+    - "rclone.timer"
