--- a/ansible/roles/rclone/vars/main.yml
+++ b/ansible/roles/rclone/vars/main.yml
@@ -9,6 +9,6 @@ rclone_tarball_dest: "/opt/rclone-{{ rclone_version }}-linux-amd64.zip"
 rclone_tarball_uncompressed_fullpath: "{{ rclone_tarball_uncompress_dir }}/rclone-{{ rclone_version }}-linux-amd64/{{ rclone_tarball_uncompressed_name }}"
 rclone_url: "https://github.com/rclone/rclone/releases/download/{{ rclone_version }}/rclone-{{ rclone_version }}-linux-amd64.zip"
 rclone_checksum: "sha256:0e6fa18051e67fc600d803a2dcb10ddedb092247fc6eee61be97f64ec080a13c"
----
+# rclone config
 src_bucket_name: "bk-trietnguyen-stc"
 dest_bucket_name: "des-tnguyen547-stc"
